<resources>
    <string name="app_name">Ehras</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="langoug">Languge</string>
    <string name="my_medicine_list">My medicine list</string>
    <string name="setting">Setting</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="dose_of_pill">Dose of pill</string>
    <string name="frequency">Frequency</string>
    <string name="time">Time</string>
    <string name="number_of_days">Number of days</string>
    <string name="pill_number">Pill Number</string>
    <string name="add_photo">add photo</string>
    <string name="about_the_medicine">About the medicine</string>
    <string name="ex_take_the_medicine_on_empty_stak">ex: Take the medicine on empty stak</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_relative">Add Relative</string>
    <string name="remainder">Remainder :</string>
    <string name="sound">Sound</string>
    <string name="vibration">vibration</string>
    <string name="flash">flash</string>
    <string name="date_of_birth">date of birth</string>
    <string name="start">Start</string>
    <string name="add_prod">new prodect</string>
    <string name="edit_prod">edit prodect</string>

    <string name="price_hint_txt">*price ($)</string>
    <string name="desc_hint_txt">*dis</string>
    <string name="prod_hint_txt">*name of prodect</string>
    <string name="required_txt">want</string>
    <string name="quantity_hint_txt">*Qountity</string>
    <string name="add_med">Add Medicine</string>
    <string name="add_reltive">Add Relative</string>
    <string name="pills_at_time">Pills at time</string>
    <string name="times_per_day">Times per day</string>
    <string name="select_time">SELECT TIME</string>
    <string name="add">Add</string>
    <string name="save_chang">Save changes</string>
    <string name="want_delet">Are you sure you want to delete your medicine?</string>
    <string name="if_want_to_delet">if you delete this medicine it will delete it also in your list</string>
    <string name="cancele">Cancel</string>
    <string name="error_name_massege">User name is requird</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="ok">Ok</string>
    <string name="choose_your_date">Choose your date</string>
    <string name="complet">You have to complet your information</string>
    <string name="error">Error</string>
    <string name="Delet_med">Error</string>
    <string name="sign_up">Sign Up</string>

</resources>
