<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SettingActivity"
    android:orientation="vertical">




    <LinearLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/langoug"
            android:layout_margin="20dp"/>

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_navigate_next_black_24dp" />

    </LinearLayout>
    <View
        android:layout_width="375dp"
        android:layout_marginStart="20dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/remainder"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:layout_margin="20dp"
        />


    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/SoundNotiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/sound"

            android:layout_margin="20dp"/>

        <Switch
            android:id="@+id/switchSound"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <View
        android:layout_width="375dp"
        android:layout_marginStart="20dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/vibration"

            android:layout_margin="20dp"/>

        <Switch
            android:id="@+id/switchvibration"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <View
        android:layout_width="375dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorPrimary"
        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/flash"

            android:layout_margin="20dp"/>

        <Switch
            android:id="@+id/switchflash"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <View
        android:layout_width="375dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorPrimary"
        />


    <View
        android:layout_width="375dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorPrimary"
        />

</LinearLayout>