<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:orientation="vertical">




    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />


    <RelativeLayout

        android:id="@+id/text_views_relative"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/relative_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@id/add_relative_text"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="-62dp"
            android:clickable="true"
            android:src="@drawable/relative" />

        <TextView
            android:id="@+id/add_relative_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_relative"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="1dp"
            android:layout_height="300dp"
            android:layout_marginStart="170dp"
            android:background="@android:color/darker_gray"

            />


        <ImageView
            android:id="@+id/pills_img"
            android:layout_width="58dp"
            android:longClickable="true"
            android:layout_height="80dp"
            android:layout_marginStart="230dp"
            android:layout_marginBottom="7dp"
            android:clickable="true"
            android:src="@drawable/pills" />

        <TextView
            android:id="@+id/add_medicine_txt"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="-80dp"
            android:layout_marginTop="75dp"
            android:layout_toEndOf="@id/pills_img"
            android:text="@string/add_medicine"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/add_relative_text"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray">


        </RelativeLayout>


        <ImageView
            android:id="@+id/setting_img"
            android:layout_width="75dp"
            android:layout_height="86dp"
            android:layout_above="@id/setting_txt"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="-80dp"
            android:clickable="true"
            android:src="@drawable/settings" />

        <TextView
            android:id="@+id/setting_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="40dp"
            android:text="@string/setting"
            android:textSize="20sp" />


        <ImageView
            android:id="@+id/mylist_img"
            android:layout_width="73dp"
            android:layout_height="80dp"
            android:layout_above="@id/setting_txt"
            android:layout_marginStart="230dp"
            android:layout_marginBottom="-80dp"
            android:clickable="true"
            android:src="@drawable/list" />


        <TextView
            android:id="@+id/my_list_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="40dp"
            android:layout_toEndOf="@id/setting_txt"
            android:text="@string/my_medicine_list"
            android:textColor="#59261A"
            android:textSize="15sp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>